--- a/TrainingProject/TestServer/TestServer.vcxproj.filters
+++ b/TrainingProject/TestServer/TestServer.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="OPCDataCallBackSink.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TestServer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OPCDataCallBackSink.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
