Finished OPC_Server
Still has bug while exiting the program

--- a/TrainingProject/OPC_Server/OPC_Server.vcxproj
+++ b/TrainingProject/OPC_Server/OPC_Server.vcxproj
@@ -84,6 +84,7 @@
       <Optimization>MaxSpeed</Optimization>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(SolutionDir)SignalGenerator\</AdditionalIncludeDirectories>
     </ClCompile>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
